<?xml version="1.0"?>
<package format="3">
  <name>pepper_meshes</name>
  <version>2.0.0</version>
  <description>Meshes for the Pepper robot, for ROS2</description>
  <author email="mbusy@softbankrobotics.com">Maxime Busy</author>

  <maintainer email="mbusy@softbankrobotics.com">Maxime Busy</maintainer>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International Public License</license>
  <url>http://github.com/ros-naoqi/pepper_meshes2/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>java</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
